# PaperTrail

./: .env.example  .gitignore  CLAUDE.md  FINAL_SUMMARY.md  PLAN.md  README.md  STATUS.md  WHATS_NEXT.md  pyproject.toml
backend/: config.py  db.py  guardrails.py  main.py  observability.py
backend/agent/: graph.py  scholar.py  tools.py
backend/ingestion/: embedder.py  parser.py  store.py
backend/retrieval/: reranker.py  retriever.py
backend/routers/: chat.py  papers.py
backend/verifier/: checks.py  extractor.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  chat-states.test.tsx  index.css  types.ts
frontend/src/components/: ChatThread.tsx  CitationsPanel.tsx  InputBar.tsx  MessageBubble.tsx  PaperChip.tsx  Sidebar.tsx
supabase/migrations/: 001_init.sql  002_match_chunks.sql  003_hybrid_search.sql
tests/: conftest.py  test_agent.py  test_chat.py  test_citation_enforcement.py  test_end_to_end.py  test_forward_citations.py  test_guardrails.py  test_health.py  test_ingestion.py  test_relevance_ranking.py  test_retrieval.py  test_scholar.py  test_verifier.py  test_verifier_eval.py
tests/data/: verifier_eval.json
