[project]
name = "papertrail"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "docling>=2.0",
    "openai>=1.0",
    "supabase>=2.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "fpdf2>=2.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
